2004-05-25  Al Slater  <al.slater@scluk.com>

	* include/httpext.h (HSE_SEND_HEADER_EX_INFO,
	HSE_REQ_SEND_RESPONSE_HEADER_EX): Define.

2004-05-15  Filip Navara  <xnavara@volny.cz>

	* include/ddk/kbdmou.h: New file.
	* lib/ddk/videoprt.def (VideoPortMapBankedMemory,
	VideoPortMapDmaMemory, VideoPortMapMemory): Correct suffix.
	* lib/ddk/ntoskrnl.def (_snprintf, _snwprintf, _vsnprintf,
	_vsnwprintf, sprintf, swprintf): Export.

2004-05-15  Filip Navara  <xnavara@volny.cz>

	* include/ddk/ntddk.h: Don't set 4-byte alignment on included
	headers.

2004-05-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h: Correct non-unicode typedefs of
	ENUMLOGFONTEXDV, PENUMLOGFONTEXDV, LPENUMLOGFONTEXDV.

2004-05-07  Pascal Obry  <obry@act-europe.fr>

	* include/winsock.h (IN_CLASSA): Fix macro.
	* include/winsock2.h (IN_CLASSA): Fix macro.

2004-04-29  Bart Oldeman  <bartoldeman@users.sourceforge.net>

	* include/objbase.h (STGOPTIONS): Correct pwcsTemplateFile type.
	* include/aclui.h: Remove '\r', throughout.
	* include/msacm.h: Likewise.
	* lib/aclui.def: Likewise.

2004-04-28  Luke Dunstan  <infidel@users.sourceforge.net>

	* lib/comctl32.def (SetWindowSubclass): Add stub.
	Thanks to Eugene <egladysh@users.sourceforge.net>.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winbase.h (EXECUTION_STATE): Add typedef.
	(SetThreadExecutionState): Declare.
	* include/wingdi.h (_WINGDI_): Define.
	* include/objbase.h (_OBJBASE_H_): Define.

2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>

	* include/winuser.h (SM_IMMENABLED, SM_CXFOCUSBORDER,
	SM_CYFOCUSBORDER, SM_TABLETPC, SM_MEDIACENTER): Add defines.
	(SM_CMETRICS): Adjust value.
	* include/winnt.h (PROCESSOR_ARCHITECTURE_MSIL): Correct define.
	(PROCESSOR_ARCHITECTURE_AMD64, PROCESSOR_ARCHITECTURE_IA32_ON_WIN64):
	Add defines.
	Thanks to Benoit Blanchon <benoit.blanchon@free.fr>

2004-04-24  Justin Forest  <vhex@users.sourceforge.net>
