@@ -2619,9 +2619,9 @@ typedef struct _IMAGE_EXPORT_DIRECTORY {
 	DWORD Base;
 	DWORD NumberOfFunctions;
 	DWORD NumberOfNames;
-	PDWORD *AddressOfFunctions;
-	PDWORD *AddressOfNames;
-	PWORD *AddressOfNameOrdinals;
+	DWORD AddressOfFunctions;
+	DWORD AddressOfNames;
+	DWORD AddressOfNameOrdinals;
 } IMAGE_EXPORT_DIRECTORY,*PIMAGE_EXPORT_DIRECTORY;
 typedef struct _IMAGE_IMPORT_BY_NAME {
 	WORD Hint;
